@@ -101,7 +101,6 @@ namespace libtorrent
 		TORRENT_ASSERT(bytes < 0x30000000);
 
 		TORRENT_ASSERT(bytes >= page_size());
-		TORRENT_ASSERT(bytes % page_size() == 0);
 #ifdef TORRENT_DEBUG_BUFFERS
 		int page = page_size();
 		int num_pages = (bytes + (page-1)) / page + 2;
